# pythinker-code

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  flake.nix  pyproject.toml  pytest.ini  pythinker.spec  security-scan-findings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: changelog-entry-required.yml  ci-docs.yml  ci-pythinker-cli.yml  ci-pythinker-core.yml  ci-pythinker-host.yml  ci-pythinker-sdk.yml  dispatch-pythinker-home-sync.yml  docs-pages.yml  homebrew-tap.yml  linux-installer.yml  pr-title-checker.yml  promote-release.yml  release-pythinker-cli.yml  release-pythinker-core.yml  release-pythinker-host.yml  release-pythinker-sdk.yml  typos.yml  windows-installer.yml
docs/: AGENTS.md  index.md  package.json
docs/.vitepress/: config.ts
docs/en/: faq.md  index.md
docs/public/: install.ps1  install.sh
docs/scripts/: sync-changelog.mjs
examples/custom-echo-soul/: README.md  main.py  pyproject.toml
examples/custom-pythinker-soul/: README.md  main.py  pyproject.toml
examples/custom-tools/: README.md  main.py  myagent.yaml  pyproject.toml
examples/pythinker-cli-stream-json/: README.md  main.py  pyproject.toml
examples/pythinker-cli-wire-messages/: README.md  main.py  pyproject.toml
examples/pythinker-psql/: README.md  agent.yaml  main.py  pyproject.toml
examples/sample-plugin/: SKILL.md
plips/: plip-2-acphost.md  plip-8-config-and-skills-layout.md  plip-9-sdk-professionalization.md
scripts/: build_vis.py  build_web.py  check_pythinker_dependency_versions.py  cleanup_tmp_sessions.py  install-native.sh  install.ps1  install.sh  seed-install-counter.mjs
sdks/pythinker-sdk/: CHANGELOG.md  NOTICE  README.md  pyproject.toml
src/pythinker_code/: __main__.py  agentspec.py  app.py  config.py  constant.py  exception.py  execution_profiles.py  llm.py  metadata.py  project_memory.py  scratchpad.py  session.py  session_fork.py  session_state.py  share.py  usage_ratelimit_cache.py
tasks/: todo.md  tui-enhancement-plan.md  tui-text-color-standardization.md
tests/: conftest.py  test_additional_dirs_state.py  test_ai_static_requirements.py  test_attachment_cache.py  test_clipboard.py  test_git_context.py  test_installation_docs.py  test_release_update_pipeline.py  test_usage_ratelimit_cache.py
tests/acp/: conftest.py  test_protocol_v1.py  test_server_initialize.py  test_session_notifications.py  test_version.py
tests/auth/: test_anthropic_direct_auth.py  test_ascii_header.py  test_deepseek_auth.py  test_lm_studio_auth.py  test_minimax_auth.py  test_oauth_cross_process.py  test_oauth_refresh.py  test_ollama_auth.py  test_openai_auth.py  test_opencode_go_auth.py  test_openrouter_auth.py  test_platforms.py  test_resolve_api_key.py
tests/background/: test_agent_timeout.py  test_ids.py  test_manager.py  test_models.py  test_store.py  test_worker.py
tests/cli/: test_openai_login_cli.py  test_review_wrapper.py  test_secscan_wrapper.py
tests/core/: test_agent_cutover.py  test_agent_flow.py  test_agent_spec.py  test_approval_auto.py  test_approval_runtime.py  test_ask_user_plan_mode.py  test_auth_error_handling.py  test_auto_injection.py  test_background_agent_kill.py  test_config.py  test_context.py  test_context_pending_tokens.py  test_create_llm.py  test_default_agent.py  test_dependency_guard.py  test_dynamic_injection_budget.py  test_dynamic_injection_hooks.py  test_exceptions.py  test_export_cli.py  test_inspect_plan_edit_target.py  test_llm_env_overrides.py  test_load_agent.py  test_load_agents_md.py  test_memory_consolidation.py  test_memory_phase_bcd.py  test_memory_sanitize.py  test_normalize_history.py  test_notifications.py  test_openai_provider.py  test_permission_profiles.py  test_plan_flag.py  test_plan_mode.py  test_plan_mode_injection_provider.py  test_plan_mode_reminder.py  test_plan_slash.py  test_plugin.py  test_plugin_manager.py  test_plugin_tool.py  test_prepare_soul.py  test_print_background_integration.py  (+44 more)
tests/e2e/: shell_pty_helpers.py  test_basic_e2e.py  test_cli_error_output.py  test_file_mention_e2e.py  test_hooks_wire_e2e.py  test_media_e2e.py  test_pythinker_empty_tool_call_content_e2e.py  test_shell_modal_e2e.py  test_shell_pty_e2e.py  test_slash_completion_enter_tmux.py  test_subagent_smoke_e2e.py
tests/hooks/: test_config.py  test_engine.py  test_integration.py  test_runner.py
tests/notifications/: test_notification_manager.py
tests/telemetry/: test_crash.py  test_instrumentation.py  test_sentry_filters.py  test_telemetry.py
tests/tools/: test_additional_dirs.py  test_agent_tool.py  test_ask_user.py  test_background_tools.py  test_extract_key_argument.py  test_fetch_url.py  test_glob.py  test_grep.py  test_mcp_tool_result.py  test_memory_tool.py  test_plan_yolo.py  test_read_file.py  test_read_media_file.py  test_read_media_file_desc.py  test_scratchpad_tool.py  test_shell_bash.py  test_shell_powershell.py  test_str_replace_file.py  test_todo.py  test_tool_descriptions.py  test_tool_schemas.py  test_write_file.py
tests/ui/: test_console_pager.py  test_console_theme.py  test_shell_markdown.py  test_update_gate.py  test_usage.py  test_usage_dispatcher.py  test_usage_registration.py
tests/ui_and_conv/: test_acp_convert.py  test_acp_server_auth.py  test_background_completion_watcher.py  test_background_idle_reminder.py  test_btw.py  test_compaction_block.py  test_export_import.py  (+62 more)
tests_ai/: test_cli_loading_time.md  test_encoding_error_handling.md  test_utf8_encoding.md
tests_e2e/: AGENTS.md  test_mcp_cli.py  test_wire_approvals_tools.py  test_wire_config.py  test_wire_errors.py  test_wire_prompt.py  test_wire_protocol.py  test_wire_sessions.py  test_wire_skills_mcp.py  wire_helpers.py
vis/: index.html  package-lock.json  package.json
web/: index.html  openapi.json  package-lock.json  package.json  vite.config.ts
(+440 files in other folders)
